Fix: brush canvas.
Signed-off-by: 秋雨落 <i@rain.cx>